--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React/Redux/SaSS Boilerplate</title>
+    <title>Restaurantes
+    </title>
   </head>
   <body>
     <div id="app"></div>
+
+
 
 
   </body>
