--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <base href="/restaurantes/">
+  <base href="/">
   <title>Restaurantes</title>
 </head>
 
 <body>
-
-
-
   <div id="app"></div>
 </body>
 
