--- a/restaurantes/index.html
+++ b/restaurantes/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <base href="/">
+  <base href="/restaurantes/">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwqTWpZhU7AGPygyv7KYWQUdFSG2ALgGI"></script>
   <title>Restaurantes</title>
-<link href="app-a4804f3c53cbdaf7924e.min.css" rel="stylesheet"></head>
+<link href="app-b29e940df840749f1f86.min.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="vendor-a4804f3c53cbdaf7924e.min.js"></script><script type="text/javascript" src="main.a4804f3c53cbdaf7924e.min.js"></script></body>
+<script type="text/javascript" src="main.b29e940df840749f1f86.min.js"></script></body>
 
 </html>
