--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <base href="/restaurantes/">
+  <base href="/docs">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwqTWpZhU7AGPygyv7KYWQUdFSG2ALgGI"></script>
   <title>Restaurantes</title>
 </head>
