--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <base href="/docs">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwqTWpZhU7AGPygyv7KYWQUdFSG2ALgGI"></script>
   <title>Restaurantes</title>
 </head>
